--- a/backend/src/main/webapp/app/views/uploadFile/customer_name.html
+++ b/backend/src/main/webapp/app/views/uploadFile/customer_name.html
@@ -4,5 +4,12 @@
         <input type="text" class="form-control autocomplete" ng-model="uploadData.customerName" ng-change="checkNameEmpty()" 
         	   uib-typeahead="name for name in names | filter: $viewValue">
     </div>
+    
+    
+    <div class="form-group">
+    	<label>รอบส่ง</label>
+	    <select class="form-control" ng-model="sendRound.sendRoundId" ng-options="option.id as option.desc for option in sendRound.list"></select>
+    </div>
+    
 </form>
-<br /><br /><br /><br /><br /><br />
+<br /><br /><br /><br /><br />
