--- a/backend/src/main/webapp/app/views/order/main.html
+++ b/backend/src/main/webapp/app/views/order/main.html
@@ -72,7 +72,7 @@
 								      	</div>
 								    </div>
 								    
-								    <div class="form-group input-group input-group-sm" ng-show="sendRound.list.length > 1">
+								    <div class="form-group input-group input-group-sm">
 										<span class="input-group-addon">รอบส่ง</span>
 								      	<select class="form-control" ng-model="formData.searchSendRoundId" ng-options="option.id as option.desc for option in sendRound.list" ng-change="chkBoxTypeChange()">
 								      		<option value="">--ทั้งหมด--</option>
