--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -476,32 +476,7 @@
 					  
 					  	<tabset>
 					  		<tab ng-repeat="tab in tabs" heading="{{ tab.title }}" active="tab.active">
-					  			<table class="table" style="border: 0; margin-bottom: 0;" ng-if="tab.index == 0">
-							  		<thead>
-							  			<tr>
-											<th>ชื่อคอลัมน์</th>
-											<th>ชนิดข้อมูล</th>
-											<th style="color: #C9302C;">เลือกปีที่แสดงใน excel</th>
-										</tr>
-							  		</thead>
-							  		<tbody>
-							  			<tr ng-repeat="col in colDateTypes">
-							  				<td>{{ col.columnName }}</td>
-							  				<td>วันที่</td>
-							  				<td style="color: #C9302C;">
-							  					<div class="form-group">
-									                 <label class="radio-inline">
-									                     <input type="radio" name="yearType_{{$index}}" value="BE" ng-model="col.yearType" required>พ.ศ.
-									                 </label>
-									                 <label class="radio-inline">
-									                     <input type="radio" name="yearType_{{$index}}" value="AD" ng-model="col.yearType" required>ค.ศ.
-									                 </label>
-									            </div>
-							  				</td>
-							  			</tr>
-							  		</tbody>
-								</table>
-								<div class="col-xs-12" style="margin-top: 10px;" ng-if="tab.index == 1">
+								<div class="col-xs-12" style="margin-top: 10px;" ng-if="tab.index == 0">
 									<div class="col-xs-4" ng-repeat="col in colNotFounds" style="margin-bottom: 5px;"><span class="label label-danger" style="font-size: 12px;">{{ col }}</span></div>
 								</div>
 					  		</tab>
@@ -511,7 +486,7 @@
 					</div>
 	            </div>
 	           	<div class="modal-footer">
-					<button type="button" class="btn btn-default" ng-click="proceedImport()" ng-disabled="importChkForm.$invalid">ดำเนินการต่อ</button>
+					<button type="button" class="btn btn-default" ng-click="dismissImportChkModal(true)">ปิด</button>
 				</div>
 	         </div>
 	     </div>
