--- a/backend/src/main/webapp/app/views/dym_list/main.html
+++ b/backend/src/main/webapp/app/views/dym_list/main.html
@@ -7,7 +7,7 @@
 <div>
 	<div class="row">
 		<div class="col-md-12">
-			<h1 class="page-header">Dynamic List</h1>
+			<h1 class="page-header">Code Management</h1>
 		</div>
 	</div>
 	
