--- a/backend/src/main/webapp/app/views/userLog/main.html
+++ b/backend/src/main/webapp/app/views/userLog/main.html
@@ -15,14 +15,13 @@
 	                
 					<div class="panel panel-info" style="margin: 0;">
 						<div class="panel-heading">
-							<form class="form-inline">
+							<form class="form-inline" autocomplete="off">
 							  <div class="form-group input-group">
 							  	<span class="input-group-addon"><i class="fa fa-user-circle-o"></i></span>
-								<select name="roles" class="form-control" ng-model="formData.role" ng-options="option.authority as option.name for option in rolesConstant" ng-change="getUsers()">
+								<select name="roles" class="form-control" ng-model="formData.role" ng-options="option as option.name for option in rolesConstant" ng-change="getUsers()">
 									<option value="">--กรุณาเลือก--</option>
 						  		</select>
 							  </div>
-							  
 							  
 							  <div class="form-group input-group">
 							  	<span class="input-group-addon"><i class="fa fa-user-o"></i></span>
@@ -31,24 +30,67 @@
 						  		</select>
 							  </div>
 							  
+							  <div class="form-group input-group">
+							  	<span class="input-group-addon">Actions</span>
+								<select name="users" class="form-control" ng-model="formData.actionName" ng-options="option.actionName as option.actionDesc for option in actionList" ng-change="getLog()">
+									<option value="">--กรุณาเลือก--</option>
+						  		</select>
+							  </div>
+							  
+							  <div class="input-group input-daterange">
+							  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+			                    	   <input name="dateFrom" type='text' class="form-control dtPicker" style="width: 130px; font-size: 0.9em;" 
+					                    	   ng-model="formData.dateFrom" placeholder="วันที่เริ่มต้น" date-parser="dd/MM/yyyy HH:mm" />
+						                <span class="input-group-addon">ถึง</span>
+					                    <input name="dateTo" type='text' class="form-control dtPicker" style="width: 130px; font-size: 0.9em;"
+					                    	   ng-model="formData.dateTo" placeholder="วันที่สิ้นสุด" date-parser="dd/MM/yyyy HH:mm" />			                    	   
+							  </div>
 							</form>
 						</div>
+						
+						<div class="alert alert-info form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin: 3px;">
+							<span class="input-group-addon" style="border: 0px; background: none; color: #337AB7;">
+								{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{numPages}} ({{'pagination.total' | translate}} {{ totalItems }} {{'pagination.items' | translate}})
+							</span>
+							<pagination ng-change="getLog()" total-items="totalItems"
+										first-text="{{'pagination.first' | translate}}"
+										previous-text="{{'pagination.previous' | translate}}"
+										next-text="{{'pagination.next' | translate}}"
+										last-text="{{'pagination.last' | translate}}"
+										ng-model="formData.currentPage" items-per-page="itemsPerPage"
+										max-size="maxSize" class="pagination-sm pull-right" boundary-links="true"
+										rotate="false" num-pages="numPages" style="margin: auto;" />
+							<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none; color: #337AB7;">
+								<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="itemsPerPage" ng-change="getLog()"></select>&nbsp;{{'pagination.per_page' | translate}}								
+							</span>
+						</div>
+						
 					</div>
 					
-					<div class="table-responsive" style="max-height: 405px; overflow: auto;">
+					
+					
+					<div class="table-responsive" style="max-height: 409px; overflow: auto;">
 						<table class="table table-striped table-hover" style="margin: 0;">
 							<thead>
 								<tr style="color: #337AB7;">
 									<th>#</th>
-									<th>วันที่ เวลา</th>
+									<th>Date</th>
+									<th>User IP</th>
+									<th>User Name</th>
 									<th>Action Name</th>
+									<th>Action Details</th>
 								</tr>
 							</thead>
 							<tbody>
 								<tr ng-repeat="log in logs track by $index" style="color: #337AB7;">
 									<td>{{ $index + 1 }}</td>
-									<td>{{ log.createdDateTime | date:'dd/MM/yyyy hh:mm:ss' }}</td>
-									<td>{{ log.actionName }}</td>
+									<td>{{ log.createdDateTime | date:'dd/MM/yyyy HH:mm:ss' }}</td>
+									<td>{{ log.remoteIP }}</td>
+									<td>{{ allUsersMap[log.userId].showname }}</td>
+									<td>{{ log.actionDesc }}</td>
+									<td>
+										<i class="fa fa-info-circle" style="cursor: pointer;" ng-click="acionDesc(log.requestPayload)"></i>
+									</td>
 								</tr>
 							</tbody>
 						</table>
