--- a/backend/src/main/webapp/app/views/contact_us/main.html
+++ b/backend/src/main/webapp/app/views/contact_us/main.html
@@ -9,20 +9,24 @@
        <div class="col-md-12">
        
            <div class="row">
-			<div class="col-md-4 col-md-offset-4">
+			<div class="col-md-6 col-md-offset-3">
 				<div class="panel panel-primary">
                     <div class="panel-body">
 	                    <div class="well well-sm" style="margin-bottom: 0;">
 	                        <div class="form-horizontal" style="padding-top: 15px;">
 		                        <div class="form-group input-group">
+									<span class="input-group-addon"></span>
 									<input class="form-control" placeholder="Name..." ng-model="formData.name">
 									<span class="input-group-addon"></span>
 									<input class="form-control" placeholder="Mobile..." ng-model="formData.mobile">
+									<span class="input-group-addon"></span>
 								</div>
 		                        <div class="form-group input-group">
+									<span class="input-group-addon"></span>
 									<input class="form-control" placeholder="Line ID..." ng-model="formData.line">
 									<span class="input-group-addon"></span>
 									<input class="form-control" placeholder="Email..." ng-model="formData.email">
+									<span class="input-group-addon"></span>
 								</div>
 								<div class="form-group">
 									<textarea class="form-control" placeholder="Detail" style="resize: vertical; min-height: 150px;" ng-model="formData.detail"></textarea>
