--- a/backend/src/main/webapp/app/views/dym_list/list.html
+++ b/backend/src/main/webapp/app/views/dym_list/list.html
@@ -30,17 +30,23 @@
 		<table id="tbSortable" class="table table-striped table-hover">
 			<thead>
 				<tr style="color: #337AB7;">
-					<th style="width: 35%;">ชื่อ</th>
-					<th style="width: 17%;">Column Name</th>
-					<th style="width: 12%;">FN</th>
-					<th style="width: 12%;">Related FN</th>
-					<th style="width: 12%;">สถานะ</th>
-					<th style="width: 12%;"></th>
+					<th>Type</th>
+					<th>ชื่อ</th>
+					<th>Column Name</th>
+					<th>FN</th>
+					<th>Related FN</th>
+					<th>สถานะ</th>
+					<th></th>
 				</tr>
 			<thead>
 			<tbody>
 				<tr ng-repeat="item in items" style="color: #337AB7;">
-					<td style="vertical-align: middle;" id="{{ item.id }}"><span editable-text="item.name" e-name="name" e-form="rowform">{{ item.name }}</span></td>
+					<td style="vertical-align: middle;" id="{{ item.id }}">
+						<span editable-select="item.type" e-ng-options="s.value as s.text for s in types" e-name="type" e-form="rowform">
+							{{ item.type ? typeMap[item.type] : 'code' }}
+						</span>
+					</td>
+					<td style="vertical-align: middle;"><span editable-text="item.name" e-name="name" e-form="rowform">{{ item.name }}</span></td>
 					<td style="vertical-align: middle;"><span editable-text="item.columnName" e-name="columnName" e-form="rowform">{{ item.columnName }}</span></td>
 					<td style="vertical-align: middle;"><span editable-text="item.fieldName" e-name="fieldName" e-form="rowform">{{ item.fieldName }}</span></td>
 					<td style="vertical-align: middle;"><span editable-text="item.relatedFieldName" e-name="relatedFieldName" e-form="rowform">{{ item.relatedFieldName }}</span></td>
