--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -281,7 +281,11 @@
 									<td style="vertical-align: middle; text-align: right; white-space: nowrap;">{{ data['appointAmount'] | number:2 }}</td>
 									
 									<td style="vertical-align: middle; text-align: center; white-space: nowrap;" ng-repeat="list in dymList">
-										{{ data['link_' + list.fieldName][0].code || data['link_' + list.fieldName][0].meaning }}
+										<!-- {{ data['link_' + list.fieldName][0].code || data['link_' + list.fieldName][0].meaning }} -->
+										{{ 
+										  list.type > 1 ? (list.type == 2 ? data[list.fieldName] : (list.type == 3 ? (data[list.fieldName] | number:2) : (data[list.fieldName] | date : gb_dateTimeFormat))) 
+										  : (data['link_' + list.fieldName][0].code || data['link_' + list.fieldName][0].meaning) 
+										}}
 									</td>
 									
 									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['tel'] }}</td>
