--- a/backend/src/main/webapp/app/views/working/sub/func_1.html
+++ b/backend/src/main/webapp/app/views/working/sub/func_1.html
@@ -27,6 +27,9 @@
 					&nbsp;&nbsp;&nbsp;{{ other.lastTabActionMenuActive.name }}&nbsp;&nbsp;&nbsp;
 					<i class="fa fa-sticky-note" style="color: #fccf7c;"></i>
 				</span>
+				<span class="badge" style="background-color: #356190; font-weight: 500; padding: 7px 11px; border-radius: 4px; color: #fccf7c; cursor: pointer;" ng-click="addOtherTraceObj.addOtherTrace(other.lastTabActionMenuActive)">
+					<i class="fa fa fa-plus fa-1x" title="บันทึก{{ other.lastTabActionMenuActive.name }}"></i>
+				</span>
 			</div>
 		</div>
 		
@@ -120,3 +123,117 @@
 		<i class="fa fa-plus"></i>
 	</button>
 </div>
+
+
+
+
+
+
+
+
+<!-- Modal -->
+<div class="trace">
+	 <div class="modal fade" id="myModal_other" tabindex="-1" role="dialog" style="cursor: move; overflow: visible; left: 16%;">
+	     <div class="modal-dialog modal-lg">
+	     	<form name="saveAskModalForm" ng-submit="askModalObj.askModalSave()" novalidate>
+		     	<fieldset ng-disabled="askModalObj.isSaving" style="border: 0; border-radius: 0; padding: 0;">
+		         <div class="modal-content">
+		         	<div class="modal-header">
+		                <button type="button" class="close" ng-click="addOtherTraceObj.dismissModalAskOther()" aria-hidden="true">&times;</button>
+		                <h4 class="modal-title">บันทึกข้อมูล {{ addOtherTraceObj.addOtherTraceTitle }}</h4>
+		            </div>
+		            <div class="modal-body">
+						<div class="panel panel-default" style="margin-bottom: 0; margin-top: 0;">
+						  <div class="panel-body">
+						  
+							  <div class="row">
+								  <div class="form-group col-xs-4 form-group-sm">
+									<label class="control-label">เบอร์โทร</label>
+									<input name="userNameShow" class="form-control" ng-model="askModalObj.trace.tel">
+								  </div>
+								  
+								  <div class="form-group col-xs-4 form-group-sm">
+									<label class="control-label">เบอร์โทร</label>
+									<input name="userNameShow" class="form-control" ng-model="askModalObj.trace.tel">
+								  </div>
+								  
+								  <div class="form-group col-xs-4 form-group-sm" ng-class="{'has-error':saveAskModalForm.resultText.$invalid}">
+								    <label class="control-label">ผลการติดตาม</label>
+							  		<textarea name="resultText" maxlength="{{ askModalObj.init.maxlength }}" class="form-control" style="resize: none;" rows="3" ng-model="askModalObj.trace.resultText" required></textarea>
+								  </div>
+							  </div>
+							  
+							  
+							<!--   <div class="row">
+								  <div class="col-xs-6">
+									<div class="form-group">
+										<label class="control-label">วันนัดชำระ | ยอดนัดชำระ</label>
+										<div class="input-group">
+						                    <input ng-model-options="{ updateOn: 'blur' }" name="appointDate" type='text' class="form-control input-sm dtPicker" style="width: 130px; font-size: 0.9em;" 
+						                    	   ng-model="askModalObj.trace.appointDate" date-parser="dd/MM/yyyy HH:mm" />
+										  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+						                    <input type="number" class="form-control input-sm" ng-model="askModalObj.trace.appointAmount" ng-disabled="!askModalObj.trace.appointDate" />
+										</div>						
+									</div>
+								  </div>
+								  <div class="col-xs-6">					  
+									<div class="form-group">
+										<label class="control-label">วันนัด Call</label>
+									    <div class="input-group">
+						                    <input name="nextTimeDate" type='text' class="form-control input-sm dtPicker" style="font-size: 0.9em;" 
+						                    	   ng-model="askModalObj.trace.nextTimeDate" date-parser="dd/MM/yyyy HH:mm" />
+										  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+										</div>
+									</div>
+								  </div>
+								  <div class="col-xs-12">
+									  <div class="row">
+										  <div class="col-xs-6" ng-repeat="list in dymList">
+										  	<div class="form-group">
+												<label class="control-label">{{ list.name }}</label>
+												<small style="position: absolute; right: 14px; color: #d58512" ng-show="list.isSuspend">
+													<i class="fa fa-exclamation-triangle"></i>เว้นการติดต่อ
+												</small>
+												<div class="input-group input-group-sm" ng-show="!list.type || list.type == 1">
+													<div class="input-group-btn" ng-show="list.dymListDetGroup.length > 0">
+														<select style="height: 30px; width: 25px;" name="dymList_{{ $index }}" class="input-group-addon" ng-model="list.groupSelected" ng-options="option as option.name for option in list.dymListDetGroup" ng-change="changeGroup(list)"></select>
+											  		</div>
+													<span class="input-group-addon" ng-show="list.dymListDetGroup.length == 0"><i class="fa fa-sticky-note"></i></span>
+													<select name="dymList_{{ $index }}" class="form-control" ng-model="list.dymListVal" ng-options="option._id as (option.code ?  option.code + ' : ' + option.meaning : option.meaning) for option in list.dymListDet | filter:askModalObj.dymListFilter() | orderBy:'order'" ng-change="askModalObj.selectedChange(list)">
+														<option value="">--Select--</option>
+											  		</select>
+										  		</div>
+										  		
+										  		<textarea name="{{ list.fieldName }}" style="resize: vertical;" class="form-control input-sm" rows="1" ng-if="list.type == 2" ng-model="list.dymListVal"></textarea>
+										  		<input name="{{ list.fieldName }}" type="number" class="form-control input-sm" ng-if="list.type == 3" ng-model="list.dymListVal">
+												<div class="input-group" ng-if="list.type == 4">
+								                    <input name="{{ list.fieldName }}" type='text' class="form-control input-sm dtPicker" style="font-size: 0.9em;" 
+								                    	   ng-model="list.dymListVal" date-parser="dd/MM/yyyy HH:mm" />
+												  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+												</div>
+												
+											  </div>
+										  </div>
+									  </div>  
+								  </div>
+							  </div>
+							   -->
+							  
+							  
+							  
+							  
+							  
+						  </div>
+						</div>
+		            </div>
+		           	<div class="modal-footer">
+						<button type="button" class="btn btn-default" ng-click="addOtherTraceObj.dismissModalAskOther()">ปิด</button>
+						<button type="submit" class="btn btn-primary">{{ askModalObj.isSaving ? 'กำลังบันทึก...' : 'บันทึก' }}</button>
+					</div>
+		         </div>
+		         </fieldset>
+	         </form>
+	     </div>
+	 </div>
+ </div>
+ <!-- Modal -->
