--- a/backend/src/main/webapp/liff/liff.css
+++ b/backend/src/main/webapp/liff/liff.css
@@ -132,17 +132,14 @@ ul#keys-freebie>li>span {
   touch-action: manipulation;
 }
 #lps-overlay {
-  position: absolute; /* Sit on top of the page content */
-  display: block;  /* Hidden by default */
-  width: 100%; /* Full width (cover the whole page) */
-  height: 100%; /* Full height (cover the whole page) */
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0,0,0,0.3); /* Black background with opacity */
-  z-index: 2000; /* Specify a stack order in case you're using a different order for other elements */
-  text-align: center;
+	position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 2000;
+    background-color: rgba(0,0,0,0.3);
+    text-align: center;
 }
 #lps-overlay div {
     position:relative;
